# Hero_HK

./: README.md
Hero_HK/: CMakeLists.txt  Drawing.cpp  Struct.h  main.cpp
Hero_HK/Analaze_Data/: Analaze_Data.cpp  Analaze_Data.h
Hero_HK/Armor/: ArmorBox.cpp  ArmorDetect.cpp  ArmorDetect.h  LightBar.cpp  NumClassifier.cpp  matchArmors.cpp
Hero_HK/HaikangCamera/: HaikangCameraRGB.cpp  HaikangCameraRGB.h
Hero_HK/HaikangCamera/HaiKangAPIinclude/: MvCameraControl.h  MvErrorDefine.h
Hero_HK/PNP_Distance/: PNP_Distance.cpp  PNP_Distance.h
Hero_HK/SerialPort/: SerialPort.cpp  SerialPort.h
Hero_HK/Thread/: MyThread.cpp  MyThread.h
